fixed frequent apps css spacing calculation, since the box passed didn't take into account the grid spacing in updateDisplaySize, which is the widget which has the right padding

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -900,9 +900,9 @@ StScrollBar StButton#vhandle:active {
 
 .search-display > StBoxLayout,
 .all-apps,
-.frequent-apps > StBoxLayout {
+.frequent-apps > StBoxLayout{
     /* horizontal padding to make sure scrollbars or dash don't overlap content */
-    padding: 8px 88px;
+    padding: 10px 88px;
 }
 
 .pages-indicator {
